removed prints and warnings, and added comments